--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
 
 - task: AzureRmWebAppDeployment@4
   inputs:
-    ConnectionType: 'AzureRM'
+    ConnectionType: 'azure'
     azureSubscription: 'af2ff8b7-fd77-4ce8-a1d4-2a4fe19234e8'
     appType: 'webApp'
     WebAppName: 'MDPipelineTest'
