--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ steps:
 - task: AzureRmWebAppDeployment@4
   inputs:
     ConnectionType: 'azure'
-    azureSubscription: 'af2ff8b7-fd77-4ce8-a1d4-2a4fe19234e8'
+    azureSubscription: 'TestPipeLines'
     appType: 'webApp'
     WebAppName: 'MDPipelineTest'
     deployToSlotOrASE: true
