--- a/azure-pipelinesWinApp.yml
+++ b/azure-pipelinesWinApp.yml
@@ -24,7 +24,7 @@ steps:
     replaceExistingArchive: true
     verbose: true
 
-- task: AzureRmWebAppDeployment@4
+- task: AzureWebApp@1
   inputs:
     azureSubscription: 'TpWinMD'
     appType: 'webApp'
